--- a/css/kk.css
+++ b/css/kk.css
@@ -1,4 +1,19 @@
 @media (max-width:1400px) {
+    .s-press {
+        padding-top: 0px;
+    }
+    .s-press .title-press {
+        text-align:left;
+        padding-left:50px;
+    }
+    .s-press .row .block-press {
+        margin-bottom:22px;
+    }
+    .s-seen .row .block-seen {
+        padding:50px;
+        padding-top:0px;
+        padding-bottom:0px;
+    }
     #header-06 .navbar .navbar-nav .nav-item .nav-link {
         padding: 22px 0px;
     }
@@ -195,6 +210,51 @@
     #footer-06 .copyright p {
         padding:30px 0px;
     }
+    #about_cryptonic_06 .shape2 {
+        bottom: -10%;
+        right: 0;
+        z-index: -1;
+    }
+    .s-press .row .block-press {
+        margin-bottom: 20px;
+    }
+    .s-press .row .block-press.item-1, .s-press .row .block-press.item-2, .s-press .row .block-press.item-3, .s-press .row .block-press.item-4, .s-press .row .block-press.item-5, .s-press .row .block-press.item-6 {
+        margin-top: 0px;
+    }
+    .s-press .title-press {
+        margin-bottom: 20px;
+        text-align: center;
+        padding-left: 0px;
+    }
+    .s-press {
+        padding-top:0px;
+        padding-bottom:80px;
+    }
+    .s-seen {
+        border-radius: 40px;
+        padding-top: 40px;
+        padding-bottom: 80px;
+    }
+    .s-seen .row .block-seen {
+        padding:10px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+    .s-seen .row .block-seen {
+        background: linear-gradient(to bottom,rgba(0, 38, 173, 0),rgba(0, 29, 134, 0.0),rgba(0, 85, 189, 0.0))!important;
+        border: 0px solid rgba(0, 64, 160, 0.5)!important;
+        border-left: 0px solid!important;
+        border-right: 0px solid!important;
+    }
+    .s-seen .row .block-seen.item-1, .s-seen .row .block-seen.item-2, .s-seen .row .block-seen.item-5, .s-seen .row .block-seen.item-6, .s-seen .row .block-seen.item-9, .s-seen .row .block-seen.item-10, .s-seen .row .block-seen.item-13, .s-seen .row .block-seen.item-14 {
+        background: linear-gradient(to bottom,rgba(0, 38, 173, 0),rgba(0, 29, 134, 0.1),rgba(0, 85, 189, 0.1))!important;
+        border: 1px solid rgba(0, 64, 160, 0.5)!important;
+        border-left: 0px solid!important;
+        border-right: 0px solid!important;
+    }
+    #asseenon {
+        overflow: hidden;
+    }
 }
 @media (max-width:500px) {
     .header .navbar {
@@ -330,6 +390,17 @@
         right:0px;
         height: 55px;
     }
+    .s-press .row .block-press img {
+        background: linear-gradient(to top,rgba(0, 56, 255, 0.15),rgba(255, 255, 255, 0),rgba(255, 255, 255, 0));
+    }
+    .s-press .row .block-press {
+        padding:0px 10px;
+        margin-bottom:15px;
+    }
+    .s-seen {
+        border-radius:0px;
+    }
+    
 }
 @media (max-width:390px) {
     .navbar-light .navbar-brand::before {
@@ -347,6 +418,9 @@
     }
     #roadmap_06 .location_04 .location_wrapper .location {
         margin-bottom:10px;
+    }
+    .s-press .row .block-press {
+        padding:0px 12px;
     }
 }
 @media (max-width:370px) {
