--- a/css/style.css
+++ b/css/style.css
@@ -4782,9 +4782,13 @@ select {
 	margin-top: 0px;
 	margin-right: 50px;
 	line-height: 54px;
+    transition: all .5s ease-in-out;
+}
+#header-06 .intro-text .btn_video_wrapper a:hover {
+    transition: all .5s ease-in-out!important;
 }
 #header-06 .intro-text .btn_video_wrapper .video_wrapper .video-play-btn {
-	text-align: center;
+    text-align: center;
 }
 #header-06 .intro-text .btn_video_wrapper .video_wrapper .video-play-btn span {
 	position: relative;
@@ -4985,7 +4989,7 @@ select {
 }
 #about_cryptonic_06 {
 	background: transparent;
-	padding: 40px 0 140px;
+	padding: 40px 0 10px;
 	z-index: 2;
 	position: relative;
 }
@@ -7024,7 +7028,7 @@ select {
 }
 .total-now {
     position: relative;
-    left: 29%;
+    left: 20%;
     text-align: left;
     font-size: 1.1rem;
     font-weight: 500;
@@ -7440,11 +7444,160 @@ select {
 .block-social .social-links li a:hover {
     background: linear-gradient(100deg,#0b2481,#1436bb);
 }
+.s-press {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.s-press .row {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+}
+.s-press .row .block-press {
+    padding: 15px;
+    border-radius: 7px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    background: rgba(255, 255, 255, 0);
+    margin-bottom: 40px;
+}
+.s-press .row .block-press.item-1,
+.s-press .row .block-press.item-2,
+.s-press .row .block-press.item-3,
+.s-press .row .block-press.item-4,
+.s-press .row .block-press.item-5,
+.s-press .row .block-press.item-6 {
+    margin-top:40px;
+}
+.s-press .row .block-press img {
+    padding: 5px;
+    border-radius: 3px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    background: linear-gradient(140deg,rgba(0, 56, 255, 0.32),rgba(255, 255, 255, 0),rgba(255, 255, 255, 0));
+    opacity: .7;
+    image-rendering: -webkit-optimize-contrast;
+    vertical-align: middle;
+    border: 1px solid #0040a0;
+    border-left: 0px solid;
+    border-right: 0px solid;
+    box-shadow: 0px 0px 2px 1px rgba(56, 204, 248, 0.0);
+}
+.s-press .row .block-press img:hover {
+    opacity: 1;
+    transition: all .5s;
+    margin: 0;
+    box-shadow: 0px 0px 2px 1px rgba(56, 204, 248, 0.75);
+}
+.s-press .title-press {
+    width: 100%;
+    color: #1edfd2;
+    text-align: right;
+    font-size: 36px !important;
+    font-weight: 600 !important;
+    text-transform: capitalize !important;
+    background: linear-gradient(to bottom, #0070f9 0%, #03e8f8 100%) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    display: inline-block !important;
+}
 
 
+.s-seen {
+    border-radius: 50%;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    background: linear-gradient(to bottom,rgba(7, 0, 47, 0.7),rgba(14, 4, 77, 0));
+    border-top: 2px solid #0072ff;
+    box-shadow: 0px -8px 13px -5px rgba(0, 149, 255, 0.65);
+}
+.s-seen .row {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+}
+.s-seen .row .block-seen {
+    opacity:.7;
+    padding: 30px;
+    border-radius: 5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    background: linear-gradient(to bottom,rgba(0, 38, 173, 0.0),rgba(0, 29, 134, 0.0),rgba(0, 114, 255, 0.0));
+}
 
+.s-seen .row .block-seen img {
+    padding: 6px;
+    border-radius: 3px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    background: rgba(255, 255, 255, 0);
+    opacity: 1;
+    image-rendering: -webkit-optimize-contrast;
+    vertical-align: middle;
+    border: 0px solid #0040a0;
+    border-left: 0px solid;
+    border-right: 0px solid;
+    box-shadow: 0px 0px 2px 1px rgba(56, 204, 248, 0.0);
+}
+.s-seen .row .block-seen.item-1,
+.s-seen .row .block-seen.item-2,
+.s-seen .row .block-seen.item-3,
+.s-seen .row .block-seen.item-4,
+.s-seen .row .block-seen.item-9,
+.s-seen .row .block-seen.item-10,
+.s-seen .row .block-seen.item-11,
+.s-seen .row .block-seen.item-12 {
+    background: linear-gradient(to bottom,rgba(0, 38, 173, 0),rgba(0, 29, 134, 0.1),rgba(0, 85, 189, 0.1));
+    border: 1px solid rgba(0, 64, 160, 0.5);
+    border-left: 0px solid;
+    border-right: 0px solid;
+}
 
+.s-seen .row .block-seen:hover {
+    opacity: 1;
+    transition: all .5s;
+    margin: 0;
+    box-shadow: 0px 0px 2px 1px rgba(56, 204, 248, 0.75);
+}
+.s-seen .title-seen {
+    margin-bottom: 60px;
+    width: 100%;
+    color: #1edfd2;
+    text-align: center;
+    font-size: 36px !important;
+    font-weight: 600 !important;
+    text-transform: capitalize !important;
+    background: linear-gradient(to bottom, #0070f9 0%, #03e8f8 100%) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    display: inline-block !important;
+}
 
+.s-seen .row:before {
+    content: '';
+    display: block;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0),rgba(255, 255, 255, 0),#005bcc,rgba(255, 255, 255, 0),rgba(255, 255, 255, 0));
+    position: absolute;
+    bottom: -40px;
+    left: 0px;
+    width: 100%;
+}
+.s-seen .container {
+    position:relative;
+    display:block;
+}
 
 
 
